k8s/ingress/ingress-nginx/https/self-signed-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-base-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test01.nginx.zjqi.top
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc-demo3
          servicePort: 80
  tls:
  - hosts:
    - test01.nginx.zjqi.top
    secretName: ingress-nginx-test01
